--- a/Hamiltonian MC.ipynb
+++ b/Hamiltonian MC.ipynb
@@ -296,6 +296,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gas Implementation (MH version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Find nearest test:\n",
+      " 4\n",
+      "[-0.84232247  0.01731334  0.22920544]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.constants as const\n",
+    "# mesh/array (3d)\n",
+    "\n",
+    "k = const.k\n",
+    "# Make init velocities determined by temp\n",
+    "T = 300 #Kelvin\n",
+    "N = 2 # number of particles along a certain axis\n",
+    "\n",
+    "def init_pos(N):\n",
+    "    X = np.linspace(0, (N-1)/N, num=N)\n",
+    "    Y = np.linspace(0, (N-1)/N, num=N)\n",
+    "    Z = np.linspace(0, (N-1)/N, num=N)\n",
+    "    Xg, Yg, Zg = np.meshgrid(X, Y, Z)\n",
+    "    return (Xg, Yg, Zg)\n",
+    "\n",
+    "ps = init_pos(2)\n",
+    "\n",
+    "def find_nearest(point_index, positions):\n",
+    "    # positions: tuple of grids\n",
+    "    assert point_index < N**3\n",
+    "    xx = positions[0]\n",
+    "    yy = positions[1]\n",
+    "    zz = positions[2]\n",
+    "    tuple_index = np.unravel_index(point_index, xx.shape)\n",
+    "    point_x = xx[tuple_index]\n",
+    "    point_y = yy[tuple_index]\n",
+    "    point_z = zz[tuple_index]\n",
+    "    deltaX = periodic_distance_difference(point_x, xx)\n",
+    "    deltaY = periodic_distance_difference(point_y, yy)\n",
+    "    deltaZ = periodic_distance_difference(point_z, zz)\n",
+    "    dist = np.square(deltaX)\n",
+    "    dist = dist + np.square(deltaY)\n",
+    "    dist = dist + np.square(deltaZ)\n",
+    "    # Since a point itself will have the smallest (0 distance), we take the second of the smallest points\n",
+    "    # TODO - implement the line below (so it's not always itself)\n",
+    "    #dist[np.ravel_multi_index(tuple_index.T, xx.shape)] = 100 \n",
+    "    return np.argmin(dist)\n",
+    "\n",
+    "def periodic_distance_difference(coordinate, coordinate_grid):\n",
+    "    # Returns a mesh-grid like output of the periodic minimum delta\n",
+    "    delta = np.abs(coordinate_grid - coordinate * np.ones_like(coordinate_grid))\n",
+    "    return np.minimum(np.ones_like(delta)-delta, delta)\n",
+    "\n",
+    "#print(\"periodic test\\n\", periodic_distance_difference(0.3, ps[0]))\n",
+    "\n",
+    "print(\"Find nearest test:\\n\", find_nearest(4, init_pos(2)))\n",
+    "\n",
+    "# proposal step size distance\n",
+    "alpha = 0.5\n",
+    "\n",
+    "# Implement Matteo's proposal method:\n",
+    "# Move first particle, compute potential, accept/reject\n",
+    "# Move second particle, as if first particle hasn't moved, accept/reject\n",
+    "# ... All particles move indepenently of each other\n",
+    "\n",
+    "# Implement a proposal method that uses the previous accepted state (path traversal in trajectory space)\n",
+    "\n",
+    "\n",
+    "def propose(dE, shape):\n",
+    "    # dE: function of configuration\n",
+    "    for i in range(N**3):\n",
+    "        xx_new = positions[0][:::]\n",
+    "        yy_new = positions[1][:::]\n",
+    "        zz_new = positions[2][:::]\n",
+    "        peturb = alpha * np.random.uniform(low=-1, high=1, size=3)\n",
+    "        tuple_index = np.unravel_index(i, xx.shape)\n",
+    "        xx[tuple_index] = xx[tuple_index] \n",
+    "        \n",
+    "        find_nearest(i, proposed_positions)\n",
+    "    if np.random.uniform() < max(np.exp(-dE/k/T), 1):\n",
+    "        return 0# accept/move\n",
+    "    else:\n",
+    "        return 0# add current state to list again"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -319,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
